# compass.nvim

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-cd.yml  vimdoc.yml
compass/: Cargo.toml
compass/src/: bootstrap.rs  config.rs  error.rs  highlights.rs  lib.rs
compass/src/common_types/: cursor_position.rs  direction.rs  extmark.rs  lazyredraw.rs  mod.rs  timestamp.rs
compass/src/config/: frecency.rs  marks.rs  persistence.rs  picker.rs  tracker.rs
compass/src/config/common/: mod.rs  sign.rs
compass/src/config/marks/: signs.rs  update_range.rs
compass/src/config/picker/: filename.rs  jump_keymaps.rs  window_grid_size.rs
compass/src/frecency/: frecency_record.rs  frecency_type.rs  frecency_weight.rs
compass/src/functions/: mod.rs  setup.rs
compass/src/functions/follow/: completion.rs  mod.rs  opts.rs
compass/src/functions/goto/: completion.rs  mod.rs  opts.rs
compass/src/functions/open/: completion.rs  mod.rs  opts.rs
compass/src/functions/place/: completion.rs  mod.rs  opts.rs
compass/src/functions/pop/: completion.rs  mod.rs  opts.rs
compass/src/state/: frecency.rs  mod.rs  namespace.rs  record.rs  session.rs  track_list.rs  tracker.rs  worker.rs
compass/src/state/session/: data_session.rs
compass/src/ui/: ensure_buf_loaded.rs  grid.rs  highlights.rs  mod.rs  namespace.rs  record_mark.rs  tab.rs
compass/src/viml/: compass_args.rs  mod.rs
doc/: compass.nvim.txt
macros/: Cargo.toml
macros/src/: lib.rs
