[package]
name = "compass"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
macros = { path = "../macros" }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", features = ["neovim-0-10", "test"] }

serde = "1.0.214"
serde_json = "1.0.132"

anyhow = "1.0.92"
thiserror = "1.0.67"

typed-builder = "0.20.0"
chrono = { version = "0.4.38" }
bitcode = "0.6.3"

strum = { workspace = true }
strum_macros = { workspace = true }
globset = { version = "0.4.15", features = ["serde", "serde1"] }
